Push some changes to add a lil of refactoring for some stuff.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/vgen/catppuccin.user.less
+++ b/styles/vgen/catppuccin.user.less
@@ -33,7 +33,7 @@
     #lib.palette();
     #lib.defaults();
 
-    --custom-gradient: linear-gradient(
+    --custom-bluemauvered-gradient: linear-gradient(
       225deg,
       @blue 0%,
       @mauve 53.65%,
@@ -47,7 +47,13 @@
       fade(@red, 30%) 100%
     ) !important;
 
-    --custom-green-gradient: radial-gradient(
+    --custom-green-gradient: linear-gradient(
+      225deg,
+      @green 0%,
+      @teal 100%
+    ) !important;
+
+    --custom-green-radial-gradient: radial-gradient(
       50% 50%,
       @green,
       0%,
@@ -126,29 +132,9 @@
       content: url("data:image/svg+xml,@{svg}") !important;
     }
 
-    // LIGHT TOGGLE
-    .dpyhEo {
-      background-color: @text !important;
-
-      svg, svg * {
-        fill: @base !important;
-        stroke: @base !important;
-      }
-    }
-
-    // DARK TOGGLE
-    .eBYodn {
-      background-color: @base !important;
-
-      svg, svg * {
-        fill: @text !important;
-        stroke: @text !important;
-      }
-    }
-
-    // NB: SYSTEM TOGGLE WORKS AS NORMAL CHIP SELECT, C.F. FURTHER BELOW.
-
     // TEXT OVERRIDES
+    .tableList .tableListHeading .tableListHeadingTitle .titleContainer > p,
+    .dateTime .date,
     .controlButton .controlText,
     .serviceInputColumn .inputGroup .inputGroupTitle,
     .title,
@@ -164,6 +150,8 @@
     }
 
     // SUBTEXT0 OVERRIDES
+    .dateTime .time,
+    .settingsLink,
     .commissionInfoSecondary,
     .forgotContainer .forgotLink,
     .fLjlax > p,
@@ -177,6 +165,7 @@
     .mainModalContent .languages .language,
     .mainModalContent .descriptionField,
     .username,
+    .username span,
     .subText,
     .reviewContainer .ratingGroup > p,
     .pageIndex,
@@ -189,6 +178,7 @@
     .bmISxX,
     .bdkWir,
     .description,
+    .sectionDescription,
     .tipText {
       color: @subtext0 !important;
     }
@@ -223,7 +213,7 @@
       color: @accent !important;
     }
 
-    .serviceBody {
+    .serviceBody, .serviceDetailsContainer {
       .serviceName {
         color: @text !important;
       }
@@ -232,7 +222,7 @@
         color: @subtext0 !important;
 
         &.fQtxio {
-          background-image: var(--custom-gradient) !important;
+          background-image: var(--custom-bluemauvered-gradient) !important;
         }
       }
     }
@@ -267,10 +257,17 @@
     }
 
     // VGEN'S STYLISED LINKS
+    ul.subLinks > li > a > p,
     li > a {
       color: @text !important;
 
+      span {
+        color: @accent !important;
+      }
+
       &:hover {
+        color: @accent !important;
+
         span {
           color: @accent !important;
         }
@@ -293,7 +290,65 @@
       }
     }
 
+    .reviewStatsContainer {
+      .reviewStats {
+        svg, svg path {
+          fill: @text !important;
+          stroke: @text !important;
+        }
+
+        .reviewPercent {
+          color: @text !important;
+        }
+
+        .reviewCount {
+          color: @subtext0 !important;
+        }
+      }
+
+      .arrowButton {
+        .arrowButtonText {
+          color: @text !important;
+        }
+
+        svg, svg path {
+          fill: @text !important;
+          stroke: @text !important;
+        }
+      }
+
+      &:hover {
+        .reviewStats {
+          svg, svg path {
+            fill: @accent !important;
+            stroke: @accent !important;
+          }
+
+          .reviewPercent {
+            color: @accent !important;
+          }
+
+          .reviewCount {
+            color: @accent !important;
+          }
+        }
+
+        .arrowButton {
+          .arrowButtonText {
+            color: @accent !important;
+          }
+
+          svg, svg path {
+            fill: @accent !important;
+            stroke: @accent !important;
+          }
+        }
+      }
+    }
+
     // SURFACE0 BUTTONS
+    .hcPCOV,
+    .ImageCreditTag__Container-sc-22eafeb2-0,
     .reviewButton,
     .ChatChannelPreviewOptionsMenu__UserOption-sc-a149b0b1-2,
     .formLabel button.formField,
@@ -362,9 +417,74 @@
       }
     }
 
+    // HEADERS
+    .CreatorSidebar__Container-sc-2e1ee798-0,
+    .creatorNavbar {
+      background-image: linear-gradient(
+        fade(@mantle, 10%) 0%,
+        fade(@mantle, 4%) 59.9%,
+        fade(@mantle, 0%) 100%,
+      );
+      background-color: @mantle !important;
+    }
+
+    .sidebarLinks .linkInner {
+      &:hover {
+        background-color: @surface1 !important;
+      }
+
+      &:active, &:focus {
+        background-color: @surface2 !important;
+      }
+    }
+
+    // MODAL HEADER BUTTONS
+    .dKBVwa {
+      svg.headerIcon {
+        fill: @text !important;
+        stroke: @text !important;
+
+        path {
+          fill: @text !important;
+          stroke: @text !important;
+        }
+
+        &:hover {
+          fill: @accent !important;
+          stroke: @accent !important;
+
+          path {
+            fill: @accent !important;
+            stroke: @accent !important;
+          }
+        }
+      }
+
+      button[type="button"] {
+        background-image: unset !important;
+        background-color: transparent !important;
+      }
+    }
+
+    table.tableList
+      tr.tableListRow
+      td.tableListData
+      .IconButton__ButtonElement-sc-13f69b7e-0 {
+      background-image: unset !important;
+      background-color: transparent !important;
+
+      &:hover {
+        background-color: @overlay0 !important;
+      }
+
+      &:active, &:focus {
+        background-color: @overlay1 !important;
+      }
+    }
+
     // GREEN-DIENT BUTTONS
     .eNKZtI {
-      background-image: var(--custom-green-gradient) !important;
+      background-image: var(--custom-green-radial-gradient) !important;
 
       * {
         color: @base !important;
@@ -374,6 +494,7 @@
     }
 
     // CUSTOM ACCENT BUTTONS
+    .socials .socialIcon,
     .hXZCZF > li > a {
       :not(button, button *) {
         fill: @subtext0 !important;
@@ -439,7 +560,7 @@
     // CHECKBOXES
     input + .checkbox {
       background-color: @surface0 !important;
-      border-color: @overlay0 !important;
+      border-color: @surface0 !important;
 
       svg.checkmark path {
         fill: @text !important;
@@ -559,7 +680,7 @@
       background-color: @overlay0 !important;
 
       .dYbnRe {
-        background-image: var(--custom-gradient) !important;
+        background-image: var(--custom-bluemauvered-gradient) !important;
       }
     }
 
@@ -571,7 +692,7 @@
       }
 
       .filling {
-        background-image: var(--custom-gradient) !important;
+        background-image: var(--custom-bluemauvered-gradient) !important;
       }
     }
 
@@ -605,7 +726,57 @@
       }
     }
 
+    // THEME CHIP SELECT
+    .bSmJVx .themeSelector .option {
+      // LIGHT TOGGLE
+      &.dpyhEo {
+        background-color: @text !important;
+
+        svg, svg * {
+          fill: @base !important;
+          stroke: @base !important;
+        }
+
+        &:hover {
+          background-color: @subtext0 !important;
+        }
+      }
+
+      // DARK TOGGLE
+      &.eBYodn {
+        background-color: @base !important;
+
+        svg, svg * {
+          fill: @text !important;
+          stroke: @text !important;
+        }
+
+        &:hover {
+          background-color: @mantle !important;
+        }
+      }
+      // NB: SYSTEM TOGGLE WORKS AS NORMAL CHIP SELECT, C.F. ABOVE.
+    }
+
     // TOGGLES
+    * input {
+      .slider {
+        background-color: @overlay0 !important;
+
+        &::before {
+          background-color: @text !important;
+        }
+      }
+
+      &[checked] + .slider {
+        background-color: @accent !important;
+
+        &::before {
+          background-color: @base !important;
+        }
+      }
+    }
+
     .filterMenuLink:not(:has(> a)), // Only the ones that toggle!
     .tagFilter {
       color: @text !important;
@@ -717,7 +888,7 @@
         color: @accent !important;
       }
 
-      .userText .artistDisplayNameContainer {
+      .artistDisplayName {
         color: @text !important;
       }
     }
@@ -729,6 +900,20 @@
 
       .identifier {
         color: @subtext0 !important;
+      }
+    }
+
+    table.lnfAug {
+      tr {
+        border-color: @overlay0 !important;
+
+        th.jivRMW {
+          color: @subtext0 !important;
+        }
+
+        td.jlXONi {
+          color: @text !important;
+        }
       }
     }
 
@@ -820,15 +1005,17 @@
     }
 
     // SURFACE1 SECTIONS
+    .creditRow,
+    .signInStatus,
     .hrsGzu,
     .characterConcept,
     .XlSwZ,
     .mainModalContent ul.steps,
     .pricePerLicenseInfoContainer,
-    .commissionMeContainer .commissionCard,
+    .commissionCard,
     .ExpandedViewerModalMenu__Dropdown-sc-5aceb94c-3,
     .mainModalContent .languages .language,
-    :is(.hHuIfY, .lhbURp) .linkInner:hover,
+    ul.mainLinks > li > a > p:hover,
     .personalNoteGroup .personalNotes .personalNote,
     .mainModalContent .detailsColumn .creatorSection .personalMessage,
     .UserBadgeBaseCard__Card-sc-42f00c59-0,
@@ -868,6 +1055,7 @@
     }
 
     // SURFACE2 SECTIONS
+    .mainModalContent .conceptDetailsColumn .topRowContainer .avatar,
     .CharacterConceptAdvancedInfo__CollapsableDisplaySectionContainer-sc-7bc055a2-0,
     .introductionContainer .introductionTextWrapper,
     .kxjzkn .serviceBody,
@@ -902,7 +1090,7 @@
     .iOtNJw.notistack-MuiContent,
     .bsGOTS {
       color: @base !important;
-      background-image: var(--custom-gradient) !important;
+      background-image: var(--custom-bluemauvered-gradient) !important;
 
       :not(button, button *) {
         color: @base !important;
@@ -987,12 +1175,24 @@
     .eoQLjX,
     .iOtNJw.notistack-MuiContent-success,
     .kOqwgf,
-    .kXscRl,
     .kAhkUO,
     .jXnwLz {
       color: @base !important;
       background-image: unset !important;
       background-color: @green !important;
+      border-color: @green !important;
+
+      :not(button, button *) {
+        color: @base !important;
+        fill: @base !important;
+        stroke: @base !important;
+      }
+    }
+
+    // GREEN-GRADIENT ELEMENTS
+    .kXscRl {
+      color: @base !important;
+      background-image: var(--custom-green-gradient) !important;
       border-color: @green !important;
 
       :not(button, button *) {
@@ -1034,7 +1234,7 @@
       background-color: var(--custom-gradient-transparent) !important;
 
       p {
-        background-image: var(--custom-gradient) !important;
+        background-image: var(--custom-bluemauvered-gradient) !important;
       }
     }
 
@@ -1072,12 +1272,14 @@
     }
 
     // SUBTEXT0 ELEMENTS - MISC.
+    svg.actionButton,
     .requestForm
       .inputGroup.multiInput
       .inputSocialIconContainer
       .inputSocialIcon,
     svg[fill="var(--theme-GRAY-DARK)"],
     svg[fill="var(--theme-GRAY-DARKER)"],
+    svg[fill="var(--theme-BLACK-LIGHTEST-1)"],
     svg[fill="var(--theme-BLACK-LIGHTEST-2)"] {
       fill: @subtext0 !important;
       stroke: @subtext0 !important;
