fix(17track): svg theming

--- a/styles/17track/catppuccin.user.less
+++ b/styles/17track/catppuccin.user.less
@@ -226,11 +226,11 @@
 		  color: @blue !important;
 		}
 
-		a svg path[fill="white"], a:is([title="Not found"], [title="In transit"], [title="Expired"], [title="Pick up"], [title="Undelivered"], [title="Delivered"], [title="Alert"]) svg path[fill="white"] {
-			fill: @base !important;
+		a svg path[fill="white"], a:is([title="Not found"], [title="In transit"], [title="Expired"], [title="Pick up"], [title="Undelivered"], [title="Delivered"], [title="Alert"]) svg path[fill="white"], svg path[fill="white"] {
+			fill: @base;
 		}
 
-		svg path[fill="white"], svg path[fill="black"], svg path[fill="#131B35"], svg path[fill="#292E47"] {
+		[data-sidebar="group-label"] svg path[fill="white"], svg path[fill="black"], svg path[fill="#131B35"], svg path[fill="#292E47"] {
 			fill: @text;
 		}
 
