feat(17track): more theming

--- a/styles/17track/catppuccin.user.less
+++ b/styles/17track/catppuccin.user.less
@@ -104,9 +104,9 @@
 		/* --yq-zinc-200: rgba(228, 228, 231, 1);
 		--yq-zinc-300: rgba(212, 212, 216, 1);
 		--yq-zinc-400: rgba(161, 161, 170, 1);
-		--yq-zinc-500: rgba(113, 113, 122, 1);
-		--yq-zinc-600: rgba(82, 82, 91, 1);
-		--yq-zinc-700: rgba(63, 63, 70, 1);
+		--yq-zinc-500: rgba(113, 113, 122, 1); */
+		--yq-zinc-600: @mantle !important;
+		/* --yq-zinc-700: rgba(63, 63, 70, 1);
 		--yq-zinc-800: rgba(39, 39, 42, 1);
 		--yq-zinc-900: rgba(24, 24, 27, 1);
 		--yq-zinc-950: rgba(9, 9, 11, 1);
@@ -171,7 +171,7 @@
 		  background-color: @crust !important;
 		}
 
-		.hover\:bg-\[\#FAFAFA\]:hover, .hover\:bg-accent:hover, .peer\/menu-button:hover, .peer\/menu-button[data-active="true"], .focus\:bg-accent:hover, .hover\:bg-muted\/50:hover, .bg-\[\#EFF6FF\], [data-sidebar="menu-sub-button"]:hover, .cm-line:nth-child(2n) {
+		.hover\:bg-\[\#FAFAFA\]:hover, .hover\:bg-accent:hover, .peer\/menu-button:hover, .peer\/menu-button[data-active="true"], .focus\:bg-accent:hover, .hover\:bg-muted\/50:hover, .bg-\[\#EFF6FF\], [data-sidebar="menu-sub-button"]:hover, .cm-line:nth-child(2n), .hover\:bg-secondary:hover {
       background-color: @mantle !important;
 		}
 
