feat(17track): more theming

--- a/styles/17track/catppuccin.user.less
+++ b/styles/17track/catppuccin.user.less
@@ -103,8 +103,8 @@
 		--yq-zinc-100: @mantle !important;
 		/* --yq-zinc-200: rgba(228, 228, 231, 1);
 		--yq-zinc-300: rgba(212, 212, 216, 1);
-		--yq-zinc-400: rgba(161, 161, 170, 1);
-		--yq-zinc-500: rgba(113, 113, 122, 1); */
+		--yq-zinc-400: rgba(161, 161, 170, 1); */
+		--yq-zinc-500: lighten(@mantle, 5%);
 		--yq-zinc-600: @mantle !important;
 		/* --yq-zinc-700: rgba(63, 63, 70, 1);
 		--yq-zinc-800: rgba(39, 39, 42, 1);
