feat(17track): remove extra blue reference

--- a/styles/17track/catppuccin.user.less
+++ b/styles/17track/catppuccin.user.less
@@ -222,7 +222,7 @@
 		  color: @subtext1 !important;
 		}
 
-		.text-text-link, .text-primary, .text-\[--yq-blue-6\] {
+		.text-text-link, .text-primary {
 		  color: @blue !important;
 		}
 
