refactor: improve selector for navbar menu items

--- a/styles/codeberg/catppuccin.user.less
+++ b/styles/codeberg/catppuccin.user.less
@@ -49,15 +49,14 @@
     --color-link: @blue;
     --color-footer-text: @text;
 
-    .ui.secondary.menu .dropdown.item:hover,
-    .ui.secondary.menu a.item:hover,
-    .ui.secondary.menu a.active.item:hover {
-      background-color: var(--color-nav-hover-bg);
+    :is(#navbar > .menu, #navbar > .menu .menu) > a,
+    :is(#navbar > .menu, #navbar > .menu .menu) > button,
+    :is(#navbar > .menu, #navbar > .menu .menu) > details > summary {
       color: var(--color-black);
-    }
 
-    .ui.secondary.menu svg.svg {
-      color: var(--color-black);
+      &:hover {
+        background-color: var(--color-nav-hover-bg);
+      }
     }
 
     .ui.basic.red.buttons .button,
