--- a/styles/17track/catppuccin.user.less
+++ b/styles/17track/catppuccin.user.less
@@ -222,7 +222,7 @@
 		  color: @subtext1 !important;
 		}
 
-		.text-text-link, .text-primary {
+		.text-text-link, .text-primary, .text-\[\#0007B7\] {
 		  color: @blue !important;
 		}
 
@@ -285,6 +285,11 @@
 
 		/* img[src*="earth-icon.svg"] {
 			@svg: escape('<svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M1.516 6.136h1.211a2.045 2.045 0 0 1 2.046 2.046v.682a.68.68 0 0 0 .681.681A2.045 2.045 0 0 1 7.5 11.591v2.045q.705-.001 1.364-.152V10.91a2.045 2.045 0 0 1 2.045-2.045h2.575a6.15 6.15 0 0 0-.197-3.41h-1.696a.686.686 0 0 0-.682.682 2.045 2.045 0 1 1-4.09 0 .68.68 0 0 0-.683-.681 2.727 2.727 0 0 1-2.72-2.535 6.13 6.13 0 0 0-1.9 3.216m3.257-4.134v.725a1.364 1.364 0 0 0 1.363 1.364 2.045 2.045 0 0 1 2.046 2.045.682.682 0 1 0 1.364 0 2.05 2.05 0 0 1 2.045-2.045h1.012A6.13 6.13 0 0 0 7.5 1.364c-.98 0-1.906.23-2.727.638m9.586 2.459A7.501 7.501 0 0 0 0 7.5a7.5 7.5 0 1 0 14.394-2.96l-.035-.08m-1.36 5.766h-2.09a.68.68 0 0 0-.682.682V13a6.16 6.16 0 0 0 2.771-2.772m-6.863 3.257A6.14 6.14 0 0 1 1.364 7.5h1.363a.68.68 0 0 1 .682.682v.682a2.045 2.045 0 0 0 2.045 2.045.68.68 0 0 1 .682.682z" fill="color(display-p3 0.0353 0.0353 0.0431)" fill-opacity="1"/></svg>');
+			content: url("data:image/svg+xml,@{svg}");
+			} */
+
+		/* img[alt="All"] {
+			@svg: escape('<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M4.369 6.875H1.265L2.71 3.75h4.763v12.5H4.37zM15.75 3.75H8.506v3.125h5.797L9.96 16.25h3.104l5.79-12.5z" fill="color(display-p3 0.0000 0.0275 0.7176)" fill-opacity="1"/><path d="M14.929 16.25h2.89v-6.24z" fill="color(display-p3 1.0000 0.5490 0.0000)" fill-opacity="1"/></svg>');
 			content: url("data:image/svg+xml,@{svg}");
 			} */
 
