Add loading-container colourisation, which is the spinner.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/vgen/catppuccin.user.less
+++ b/styles/vgen/catppuccin.user.less
@@ -988,6 +988,7 @@
     }
 
     // SURFACE0 SECTIONS
+    .ServiceListGalleryCard__Card-sc-13b099d2-0,
     .gOwqMi,
     .jpAIoA,
     .realContainer,
@@ -1346,10 +1347,14 @@
     }
 
     // LOADING SPINNER
-    .ServiceDetailsModal__LoadingContainer-sc-aaf48a06-3 svg,
-    .ServiceDetailsModal__LoadingContainer-sc-aaf48a06-3 svg * {
+    [class*="LoadingContainer-sc"] svg {
       fill: @text !important;
       stroke: @text !important;
+
+      * {
+        fill: @text !important;
+        stroke: @text !important;
+      }
     }
 
     // MENU OPEN RING
