Err, gonna fix stuff now, one sec.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/duckduckgo/catppuccin.user.less
+++ b/styles/duckduckgo/catppuccin.user.less
@@ -212,11 +212,17 @@
 
     --sds-color-border-01: @overlay0 !important;
     --sds-color-border-accent-01: @accent !important;
-    --sds-color-palette-gray-40: @text !important;
-    --sds-color-palette-gray-60: @accent !important;
-    --sds-color-palette-gray-85: @surface1 !important;
+    --sds-color-palette-gray-40: @text !important; // Text
+    --sds-color-palette-gray-50: @overlay0 !important; // Switch Toggle
+    --sds-color-palette-gray-60: @accent !important; // Accented text
+    --sds-color-palette-gray-85: @surface1 !important; // Surface element
     --sds-color-palette-green-50: @green !important;
     --sds-color-palette-green-60: @green !important;
+    --sds-color-palette-green-70: @green !important; // "Protected"
+    .XzgiQhR6DcqPkNRYyhnH {
+      // "Protected" checkmark
+      filter: @base-filter !important;
+    }
     --sds-color-palette-red-40: @red !important;
     --sds-color-palette-white: @crust !important;
     --sds-color-palette-yellow-50: @yellow !important;
@@ -227,8 +233,7 @@
     --sds-color-text-destructive: @red !important;
     --sds-color-text-disabled: @overlay0 !important;
     --sds-color-text-link-01: @blue !important;
-    --sds-color-text-link-02: @text !important;
-    --sds-color-text-link-02--hover: @subtext1 !important;
+    --sds-color-text-link-02: @subtext1 !important;
     --sds-color-text-link-02-hover: @text !important;
     --sds-color-text-on-color: @base !important;
     --sds-color-text-on-dark-01: @text !important;
@@ -548,7 +553,7 @@
     --theme-col-bg-header: @mantle !important;
     --theme-col-bg-header-modal: @surface0 !important;
     --theme-col-bg-page: @base !important;
-    --theme-col-bg-page-alt-2: @surface0 !important;
+    --theme-col-bg-page-alt-2: @surface0 !important; // Popups
     --theme-col-bg-ui: @mantle !important;
     --theme-col-bg-ui-active: @surface1 !important;
     --theme-col-border-expandcollapse: @surface1;
