Add diff squares to github changes pages.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/github/catppuccin.user.less
+++ b/styles/github/catppuccin.user.less
@@ -474,6 +474,21 @@ regexp(
       }
     }
 
+    /* Diff Squares - Deletion: /changes/ Pages, File Header. */
+    .DiffSquares-module__deletion__GCbG3Wb {
+      /*
+       * Most of this is upstream, but we're changing the bg stripes from #fff9
+       * to @surface0.
+       */
+      background-image: repeating-linear-gradient(
+        to right bottom,
+        @surface0,
+        @surface0 0.11rem,
+        var(--bgColor-danger-emphasis) 0.11rem,
+        var(--bgColor-danger-emphasis) 0.22rem
+      );
+    }
+
     /* Enhanced Repo Insights Views - https://github.com/orgs/community/discussions/135572 */
     --data-blue-color-emphasis: @accent;
     --data-red-color-emphasis: @red;
