--- a/styles/vgen/catppuccin.user.less
+++ b/styles/vgen/catppuccin.user.less
@@ -86,7 +86,7 @@
       background-color: @base !important;
     }
 
-    hr, .divider {
+    hr, .divider, .str-chat-unread-messages-separator-line {
       background-color: @overlay1 !important;
     }
 
@@ -105,6 +105,7 @@
       border-color: transparent !important;
     }
 
+    .gnpMhs,
     .bdPBiQ .filters,
     .khYhRB,
     .filtersBar {
@@ -429,8 +430,7 @@
     }
 
     // HEADERS
-    .CreatorSidebar__Container-sc-2e1ee798-0,
-    .creatorNavbar {
+    header {
       background-image: linear-gradient(
         fade(@mantle, 10%) 0%,
         fade(@mantle, 4%) 59.9%,
@@ -505,6 +505,7 @@
     }
 
     // CUSTOM ACCENT BUTTONS
+    .paypal-button.paypal-button-color-white,
     .socials .socialIcon,
     .hXZCZF > li > a {
       :not(button, button *) {
@@ -526,7 +527,8 @@
       }
     }
 
-    // LOG IN WITH TWITTER
+    // LOG IN WITH TWITTER, PAY WITH PAYPAL
+    .paypal-button.paypal-button-color-blue,
     .IRcCi {
       background-color: @sapphire !important;
 
@@ -665,7 +667,7 @@
     }
 
     // SLIDERS
-    .slider {
+    :not(input:checked, input[checked]) + .slider {
       background-color: @overlay0 !important;
 
       .sliderFill {
@@ -771,7 +773,7 @@
 
     // TOGGLES
     * input {
-      .slider {
+      &:not([checked], :checked) + .slider {
         background-color: @overlay0 !important;
 
         &::before {
@@ -779,7 +781,7 @@
         }
       }
 
-      &[checked] + .slider {
+      &:is([checked], :checked) + .slider {
         background-color: @accent !important;
 
         &::before {
@@ -1088,6 +1090,7 @@
     }
 
     // BASE SECTIONS
+    .mainContent,
     .dKBVwa,
     .primaryContentSection,
     .jJGjin {
@@ -1097,7 +1100,6 @@
 
     // MANTLE SECTIONS
     .lhbURp .linkInner,
-    .mainContent,
     .lgEpwA,
     .kbXrba .mainModalContent .commissionSideColumn .userInfoGroup,
     .iEvEYV .taggedCharactersSection {
@@ -1137,6 +1139,7 @@
     }
 
     // RED ELEMENTS
+    .ChatMessageList__NewMessageTextWrapper-sc-15481afb-3,
     .eZqQts,
     .kLhqfT .innerColour,
     .iOtNJw.notistack-MuiContent-error,
