renamed from copilot to microsoft-copilot

--- a/styles/microsoft-copilot/catppuccin.user.less
+++ b/styles/microsoft-copilot/catppuccin.user.less
@@ -17,7 +17,7 @@
 
 @import "https://userstyles.catppuccin.com/lib/lib.less";
 
-@-moz-document domain("copilot.microsoft.com") {
+@-moz-document domain("copilot.microsoft.com"), domain("copilot.com") {
   @import url("https://unpkg.com/@catppuccin/highlightjs@1.0.0/css/catppuccin-variables.important.css");
 
   :root[data-theme="dark"] {
