fixed linting errors

--- a/styles/microsoft-copilot/catppuccin.user.less
+++ b/styles/microsoft-copilot/catppuccin.user.less
@@ -1,11 +1,11 @@
 /* ==UserStyle==
-@name Copilot Catppuccin
-@namespace github.com/catppuccin/userstyles/styles/copilot
-@homepageURL https://github.com/catppuccin/userstyles/tree/main/styles/copilot
+@name Microsoft Copilot Catppuccin
+@namespace github.com/catppuccin/userstyles/styles/microsoft-copilot
+@homepageURL https://github.com/catppuccin/userstyles/tree/main/styles/microsoft-copilot
 @version 2000.01.01
-@updateURL https://github.com/catppuccin/userstyles/raw/main/styles/copilot/catppuccin.user.less
-@supportURL https://github.com/catppuccin/userstyles/issues?q=is%3Aopen+is%3Aissue+label%3Acopilot
-@description Soothing pastel theme for Copilot
+@updateURL https://github.com/catppuccin/userstyles/raw/main/styles/microsoft-copilot/catppuccin.user.less
+@supportURL https://github.com/catppuccin/userstyles/issues?q=is%3Aopen+is%3Aissue+label%3Amicrosoft-copilot
+@description Soothing pastel theme for Microsoft Copilot
 @author Catppuccin
 @license MIT
 
