--- a/styles/vgen/catppuccin.user.less
+++ b/styles/vgen/catppuccin.user.less
@@ -505,7 +505,6 @@
     }
 
     // CUSTOM ACCENT BUTTONS
-    .paypal-button.paypal-button-color-white,
     .socials .socialIcon,
     .hXZCZF > li > a {
       :not(button, button *) {
@@ -527,8 +526,18 @@
       }
     }
 
-    // LOG IN WITH TWITTER, PAY WITH PAYPAL
-    .paypal-button.paypal-button-color-blue,
+    // PAY WITH PAYPAL, PAY WITH DEBIT OR CREDIT CARD
+    .paypal-button {
+      &.paypal-button-color-blue {
+        background-color: @sapphire !important;
+      }
+
+      &.paypal-button-color-white {
+        background-color: @accent !important;
+      }
+    }
+
+    // LOG IN WITH TWITTER
     .IRcCi {
       background-color: @sapphire !important;
 
