Use an attribute selector to remove specific autogen class.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/github/catppuccin.user.less
+++ b/styles/github/catppuccin.user.less
@@ -475,11 +475,7 @@ regexp(
     }
 
     /* Diff Squares - Deletion: /changes/ Pages, File Header. */
-    .DiffSquares-module__deletion__GCbG3Wb {
-      /*
-       * Most of this is upstream, but we're changing the bg stripes from #fff9
-       * to @surface0.
-       */
+    [class*="DiffSquares-module__deletion"] {
       background-image: repeating-linear-gradient(
         to right bottom,
         @surface0,
